<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_000000"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app"
        android:orientation="vertical"
        >
        <include layout="@layout/layout_title_bar"/>
        <include layout="@layout/layout_search"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_height_60">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/tv_btn_goods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_selector"
                    android:text="@string/category_goods"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@color/white_FFFFFF"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/tv_btn_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_selector"
                    android:text="@string/category_health"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@color/white_FFFFFF"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/tv_btn_fun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_selector"
                    android:text="@string/category_fun"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@color/white_FFFFFF"
                    />
            </RelativeLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_16"
            />
    </LinearLayout>

</LinearLayout>
