<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/rl_profile_integral"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_integral"
            android:text="@string/profile_integral"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <TextView
            android:id="@+id/my_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/rl_integral_recharge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_charge"
            android:text="@string/integral_recharge"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/icon_next"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
    />

    <RelativeLayout
        android:id="@+id/rl_profile_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_order"
            android:text="@string/profile_order"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/icon_next"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/rl_profile_reserve"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_reserv"
            android:text="@string/profile_reserve"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/icon_next"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/rl_invited_member"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_invited"
            android:text="@string/profile_invited_members"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/icon_next"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/rl_modify_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_modify_info"
            android:text="@string/profile_modify_info"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/icon_next"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/rl_deal_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_deal"
            android:text="@string/profile_deal_history"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/icon_next"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        />

    <RelativeLayout
        android:id="@+id/rl_bill"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_bill"
            android:text="发票"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/icon_next"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        android:visibility="gone"
        />

    <RelativeLayout
        android:id="@+id/rl_server_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_service"
            android:text="@string/customer_service"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="010-81558190"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_divider_line"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/rl_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comm_height_48"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/icon_exit"
            android:text="@string/profile_exit"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_16"
            android:drawablePadding="@dimen/padding_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:src="@drawable/icon_next"
            />
    </RelativeLayout>
</merge>
