<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_000000"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_app"
        >
        <TextView
            android:id="@+id/tv_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_height_60"
            android:text="@string/tab_shopping_cart"
            android:gravity="center_horizontal"
            android:background="@color/black_000000"
            android:textColor="@color/white_FFFFFF"
            android:paddingTop="@dimen/comm_height_28"
            />
        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_shopping_cart"
            android:id="@+id/swipeRefreshLayout"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rc_shopping_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_shopping_cart"
                android:layout_marginBottom="@dimen/margin_48"
                />
        </android.support.v4.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_height_48"
            android:layout_alignParentBottom="true"
            >
            <CheckBox
                android:id="@+id/cb_all_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/all_select"
                android:drawablePadding="@dimen/padding_8"
                android:drawableLeft="@drawable/checkbox"
                android:button="@null"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_10"
                />
            <TextView
                android:id="@+id/btn_order"
                android:layout_width="@dimen/comm_width_60"
                android:layout_height="@dimen/comm_height_28"
                android:text="@string/place_order"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@color/gray_979797"
                />
            <TextView
                android:id="@+id/tv_all_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="合计：0积分"
                android:layout_toLeftOf="@id/btn_order"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_10"
                />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
