<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_000000"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app"
        android:orientation="vertical"
        >
        <include layout="@layout/layout_title_bar"/>
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_logo"
            android:layout_marginTop="@dimen/margin_100"
            android:layout_centerHorizontal="true"
            />
        <LinearLayout
            android:id="@+id/ll_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_height_60"
            android:orientation="horizontal"
            android:background="@drawable/icon_input_bg"
            android:layout_below="@id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginLeft="@dimen/margin_24"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/phone_number"
                android:textColor="@color/white_FFFFFF"
                android:paddingLeft="@dimen/padding_36"
                android:gravity="center_vertical"
                />
            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="@dimen/comm_width_180"
                android:layout_height="@dimen/comm_height_32"
                android:background="@color/transparent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10"
                android:hint="11位手机号码"
                android:textColorHint="#c8c8c8"
                android:maxLength="11"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_height_60"
            android:orientation="horizontal"
            android:background="@drawable/icon_input_bg"
            android:layout_below="@id/ll_phone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginLeft="@dimen/margin_24"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textColor="@color/white_FFFFFF"
                android:paddingLeft="@dimen/padding_36"
                android:gravity="center_vertical"
                />
            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="@dimen/comm_width_180"
                android:layout_height="@dimen/comm_height_32"
                android:background="@color/transparent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10"
                android:hint="6位数字或字母"
                android:textColorHint="#c8c8c8"
                android:password="true"
                android:maxLength="6"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/ll_vc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_height_60"
            android:orientation="horizontal"
            android:layout_below="@id/ll_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginLeft="@dimen/margin_24"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verification_code"
                android:textColor="@color/black_000000"
                android:paddingLeft="@dimen/padding_24"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_16"
                />

            <EditText
                android:id="@+id/et_vc"
                android:layout_width="@dimen/comm_width_160"
                android:layout_height="@dimen/comm_height_60"
                android:background="@drawable/icon_vc_input_bg"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textColor="@color/white_FFFFFF"
                />
            <!--  <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="6666"
                  android:textColor="@color/white_FFFFFF"
                  android:gravity="center_vertical"
                  android:layout_toLeftOf="@id/et_vc"
                  android:layout_marginRight="@dimen/margin_10"
                  android:background="@drawable/icon_vc_bg"
                  android:layout_centerVertical="true"
                  android:padding="@dimen/padding_4"
                  />-->
            <ImageView
                android:id="@+id/iv_vc"
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/et_vc"
                android:layout_marginRight="@dimen/margin_4"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_height_60"
            android:orientation="horizontal"
            android:layout_below="@id/ll_vc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginLeft="@dimen/margin_24"
            >
            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/comm_height_48"
                android:text="@string/register"
                android:textColor="@color/white_FFFFFF"
                android:paddingLeft="@dimen/padding_48"
                android:paddingRight="@dimen/padding_48"
                android:gravity="center_vertical"
                android:background="@drawable/bg_btn"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text_size_16"
                />
            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/comm_height_48"
                android:text="登录"
                android:textColor="@color/white_FFFFFF"
                android:paddingLeft="@dimen/padding_48"
                android:paddingRight="@dimen/padding_48"
                android:gravity="center_vertical"
                android:background="@drawable/bg_btn"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_10"
                android:textSize="@dimen/text_size_16"
                />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_find_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_btn"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd"
                />
            <TextView
                android:id="@+id/tv_find_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_pwd"
                android:textColor="@color/black_000000"
                />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
