<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_000000"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_app"
        >
        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rl_title_bar"
            style="@style/title_bar_layout"
            >
            <LinearLayout
                android:id="@+id/ibtn_return"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/ibtn_left_action"
                    style="@style/wrap_style"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:background="@drawable/icon_back"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    tools:ignore="RtlHardcoded"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:textColor="@color/white_FFFFFF"
                android:textSize="@dimen/text_size_16"
                android:layout_centerVertical="true"
                android:visibility="gone"
                tools:ignore="RtlHardcoded"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white_FFFFFF"/>

            <TextView
                android:id="@+id/text_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_16"
                android:textColor="@color/white_FFFFFF"
                android:textSize="@dimen/text_size_16"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                tools:ignore="RtlHardcoded"/>
        </RelativeLayout>
        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_title_bar"
            android:id="@+id/swipeRefreshLayout"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rc_shopping_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_shopping_cart"
                android:layout_marginBottom="@dimen/margin_48"
                />
        </android.support.v4.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_height_48"
            android:layout_alignParentBottom="true"
            >
            <CheckBox
                android:id="@+id/cb_all_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/all_select"
                android:drawablePadding="@dimen/padding_8"
                android:drawableLeft="@drawable/checkbox"
                android:button="@null"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_10"
                />
            <TextView
                android:id="@+id/btn_order"
                android:layout_width="@dimen/comm_width_60"
                android:layout_height="@dimen/comm_height_28"
                android:text="@string/place_order"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@color/gray_979797"
                />
            <TextView
                android:id="@+id/tv_all_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="合计：0¥"
                android:layout_toLeftOf="@id/btn_order"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_10"
                />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
